# Share-Market-Analysis

./: .gitignore  CLAUDE.md  PLAN.md  README.md
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/routes/: admin.py  alerts.py  analysis.py  health.py  market.py  paper.py  portfolio.py  signals.py  watchlist.py
backend/app/core/: config.py  logging.py  scheduler.py
backend/app/data/: models.py  registry.py
backend/app/data/providers/: base.py  sample.py  yfinance_provider.py
backend/app/intelligence/: registry.py
backend/app/intelligence/indicators/: __init__.py  base.py  bollinger.py  ema.py  macd.py  rsi.py
backend/app/intelligence/patterns/: __init__.py  detect.py
backend/app/intelligence/signals/: __init__.py  base.py  confluence.py
backend/app/services/: alerts.py  ingestion.py  paper.py  portfolio.py  screener.py  watchlist.py
backend/app/storage/: db.py  history.py  models.py
backend/tests/: conftest.py  test_api.py  test_indicators.py  test_phase1.py  test_phase2.py  test_phase2b.py
docs/: IMPLEMENTATION_STATE.md  README.md  RECOMMENDATIONS.md  architecture.md  development.md
docs/guides/: README.md  alerts.md  chart-and-explanations.md  confluence-signal.md  dashboard.md  getting-started.md  paper-trading.md  patterns.md  portfolio.md  screener.md  watchlist.md
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  styles.css
frontend/src/components/: ConfluenceBadge.tsx  ExplanationPanel.tsx  PriceChart.tsx  Watchlist.tsx
frontend/src/pages/: Alerts.tsx  (+5 more)
